[gd_scene load_steps=4 format=3 uid="uid://dioyqkbgskwl5"]

[ext_resource type="Script" path="res://World/fedi_server.gd" id="1_0upif"]
[ext_resource type="Theme" uid="uid://ochiaokyyqk4" path="res://theme.tres" id="2_wwjhh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rvjq7"]
size = Vector2(128, 128)

[node name="FediServer" type="StaticBody2D"]
script = ExtResource("1_0upif")

[node name="NameLabel" type="Label" parent="."]
z_index = 5
offset_left = -18.0
offset_top = -24.0
offset_right = 22.0
offset_bottom = -1.0
theme = ExtResource("2_wwjhh")

[node name="IconParent" type="Node" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_rvjq7")
